<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="usa.sesion1.reto2.ui.productos.ProductosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="usa.sesion1.reto2.ui.servicios.ServiciosFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="usa.sesion1.reto2.ui.sucursales.SucursalesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>