<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.servicios.ServiciosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cajas1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_gallery"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/customborder"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="98dp">

        // caja 1

        <ImageView
            android:id="@+id/s1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/s1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/names1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/names1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descs1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/names1"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/descs1" />

            <Button
                android:id="@+id/btns1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/descs1"
                android:layout_weight="1"
                android:onClick="seleccion"
                android:text="@string/btnagregar"
                android:textColor="#212121"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
    //caja2

    <LinearLayout
        android:id="@+id/cajas2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajas1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/customborder">

        <ImageView
            android:id="@+id/s2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/s2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/names2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/names2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descs2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/names2"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/descs2" />

            <Button
                android:id="@+id/btns2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/descs2"
                android:layout_weight="1"
                android:onClick="seleccion"
                android:text="@string/btnagregar"
                android:textColor="#212121" />
        </LinearLayout>
    </LinearLayout>
    //CAJA3

    <LinearLayout
        android:id="@+id/cajas3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajas2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/customborder">

        <ImageView
            android:id="@+id/s3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/s3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/names3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/names3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descs3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/names3"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/descs3" />

            <Button
                android:id="@+id/btns3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/detp3"
                android:layout_weight="1"
                android:onClick="seleccion"
                android:text="@string/btnagregar" />
        </LinearLayout>
    </LinearLayout>
    //CAJA4
    <LinearLayout
        android:id="@+id/cajas4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajas3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/customborder"
        >

        <ImageView
            android:id="@+id/s4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/s4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/names4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/names4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descs4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/names4"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/descs4" />

            <Button
                android:id="@+id/btns4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/descs4"
                android:layout_weight="1"
                android:onClick="seleccion"
                android:text="@string/btnagregar" />
        </LinearLayout>
    </LinearLayout>
    //CAJA5
    <LinearLayout
        android:id="@+id/cajas5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cajas4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/customborder"
        >

        <ImageView
            android:id="@+id/s5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/s5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/names5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/names5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descs5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/names5"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/descs5" />

            <Button
                android:id="@+id/btns5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/descs5"
                android:layout_weight="1"
                android:onClick="seleccion"
                android:text="@string/btnagregar" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>