<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productos.ProductosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:textAlignment="center"
                android:textSize="20sp" />
            //CAJA 1
            <LinearLayout
                android:id="@+id/cajaprod1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_home"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/customborder">

                <ImageView
                    android:id="@+id/p1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/p1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namep1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/namep1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/descp1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/namep1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/descp1" />

                    <Button
                        android:id="@+id/btnp1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/detp1"
                        android:layout_weight="1"
                        android:onClick="seleccion"
                        android:text="@string/btnagregar" />
                </LinearLayout>
            </LinearLayout>
            //CAJA 2
            <LinearLayout
                android:id="@+id/cajaprod2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                tools:ignore="NotSibling">

                <ImageView
                    android:id="@+id/p2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/p2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namep2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/namep2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detp2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/namep2"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/descp2" />

                    <Button
                        android:id="@+id/btnp2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/detp2"
                        android:layout_weight="1"
                        android:onClick="seleccion"
                        android:text="@string/btnagregar" />
                </LinearLayout>
            </LinearLayout>
            //CAJA 3
            <LinearLayout
                android:id="@+id/cajaprod3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:id="@+id/p3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/p3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namep3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/namep3"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detp3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/namep3"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/descp3" />

                    <Button
                        android:id="@+id/btnp3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/detp3"
                        android:layout_weight="1"
                        android:onClick="seleccion"
                        android:text="@string/btnagregar" />
                </LinearLayout>
            </LinearLayout>
            //CAJA 4
            <LinearLayout
                android:id="@+id/cajaprod4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cajaprod3"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:id="@+id/p4"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/p4" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namep4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/namep4"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detp4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/namep4"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/descp4" />

                    <Button
                        android:id="@+id/btnp4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/detp4"
                        android:layout_weight="1"
                        android:onClick="seleccion"
                        android:text="@string/btnagregar" />
                </LinearLayout>
            </LinearLayout>
            //CAJA 5
            <LinearLayout
                android:id="@+id/cajaprod5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:id="@+id/p5"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/p5"
                    android:contentDescription="" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namep5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/namep5"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detp5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/descp5" />

                    <Button
                        android:id="@+id/btnp5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:onClick="seleccion"
                        android:text="@string/btnagregar"
                        android:textColor="#212121"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>